# Step into the subdirectories
MESSAGE(STATUS "Stepping into MikanClientAPI")
add_subdirectory(MikanClientAPI)
MESSAGE(STATUS "Stepping into MikanClientCore")
add_subdirectory(MikanClientCore)
MESSAGE(STATUS "Stepping into MikanCoreApp")
add_subdirectory(MikanCoreApp)
MESSAGE(STATUS "Stepping into MikanMath")
add_subdirectory(MikanMath)
MESSAGE(STATUS "Stepping into MikanRenderer")
add_subdirectory(MikanRenderer)
MESSAGE(STATUS "Stepping into MikanSerialization")
add_subdirectory(MikanSerialization)
MESSAGE(STATUS "Stepping into MikanSharedTexture")
add_subdirectory(MikanSharedTexture)
MESSAGE(STATUS "Stepping into MikanUtility")
add_subdirectory(MikanUtility)